--- a/src/components/Footer/footer.module.css
+++ b/src/components/Footer/footer.module.css
@@ -18,15 +18,16 @@
   justify-content: space-between;
 }
 
-.column {
-  flex: 1;
-  max-width: 310px;
-}
-
 .columnWide {
   flex: 2; /* This column takes more space (newsletter + logo) */
-  max-width: 580px;
+  max-width: 560px;
 }
+
+.column {
+  flex: 1;
+  max-width: 320px;
+}
+
 
 .heading {
   font-family: 'Elsie';
@@ -44,8 +45,8 @@
 }
 
 .input {
-  width: 100%;
-  padding: 20px 0;
+  width: 95%;
+  padding: 20px 10px;
   border: none;
   background-color: transparent;
   font-size: 16px;
@@ -54,7 +55,7 @@
 .button {
   color: white;
   position: absolute;
-  right: 2%;
+  right: 4%;
   top: 50%;
   transform: translateY(-50%);
   background-color: transparent;
@@ -74,7 +75,7 @@
 }
 
 .logoImage {
-  width: 100%;
+  width: 98%;
   margin-right: 20px;
 }
 
@@ -90,6 +91,8 @@
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
+  margin: -18px 0;
+
 }
 
 .linkList {
@@ -101,8 +104,8 @@
 .description {
   color: #27282C;
   max-width: 600px;
-  padding: 8px;
-  margin: 60px 0 0;
+  padding-right: 8px;
+  margin: 41px 0 0;
 
 }
 
@@ -157,7 +160,32 @@
     display: flex;
     flex-direction: column;
   }
+  .column p{
+    padding: 0px;
+    margin: 10px;  
+  }
+  .description{
+    width: 100%;   
+  }
   
+}
+
+
+@media screen and (min-width: 791px) and (max-width:1200px) {
+  .footer{
+    padding: 20px ;
+  }
+  .columnWide{
+    padding: 15px;
+    max-width: 440px;
+  }
+  .column{
+    max-width: 360px;
+  }
+  .inputContainer{
+    width: 95%;
+  }
+
 }
 
 
