--- a/src/components/Footer/footer.module.css
+++ b/src/components/Footer/footer.module.css
@@ -12,6 +12,10 @@
   justify-content: space-between;
   background-color: #D0B191;
 }
+.footer h3{
+    font-family: 'Elsie';
+    color: #58595d;
+}
 
 .upperSection {
   display: flex;
