--- a/src/components/Form/Form.module.css
+++ b/src/components/Form/Form.module.css
@@ -108,6 +108,7 @@
     cursor: pointer;
     display: inline-flex;
     justify-content: center;
+    letter-spacing: 0em;
     transition: background-color 0.3s ease, color 0.3s ease;
   }
   
