--- a/src/App.css
+++ b/src/App.css
@@ -30,3 +30,8 @@ button{
     border: 1px solid #27282C;
     background-color: transparent;
 }
+
+button:hover{
+    background-color: #000;
+    color: #fff;
+}
