--- a/src/components/AboutSection/AboutSection.module.css
+++ b/src/components/AboutSection/AboutSection.module.css
@@ -132,10 +132,8 @@ h2 {
 
 .leafIllustartions {
   width: 100px;
-  position: relative;
-  left: 20px;
-  bottom: 10px;
-  z-index: 1;
+  opacity: 0.8;
+
 }
 
 
