--- a/src/components/CheckSchedule/CheckSchedule.module.css
+++ b/src/components/CheckSchedule/CheckSchedule.module.css
@@ -106,6 +106,13 @@
 
   .rightSection {
     padding: 1rem;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    align-content: center;
+    align-items: center;
+    flex-direction: column;
+
   }
 
   .circle {
