Hero section for Home

--- a/src/components/Header/header.module.css
+++ b/src/components/Header/header.module.css
@@ -1,5 +1,5 @@
 .header {
-    background-color: #e8e1d9;
+    background-color: #D4CBC2;
     padding: 20px 40px; /* Reduced padding for better scaling */
     display: flex;
     flex-direction: row;
