--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,8 @@
-body{
+body {
     margin: 0%;
 }
 
-h1{
+h1 {
     font-family: 'Elsie';
     font-style: normal;
     font-weight: 400;
@@ -12,7 +12,7 @@ h1{
     color: #27282C;
 }
 
-p{
+p {
     font-family: 'Poppins';
     font-style: normal;
     font-weight: 400;
@@ -22,16 +22,21 @@ p{
     margin-top: 0.5rem;
 }
 
-button{
-    font-family: 'Poppins';
+button {
+    display: flex;
     cursor: pointer;
-    color: #27282C; 
-    border-radius: 23.5px;
+    color: #27282C;
+    align-items: center;
+    border-radius: 9999px;
+    font-family: 'Poppins';
+    letter-spacing: 0.1rem;
+    padding: 0.75rem 1.5rem;
     border: 1px solid #27282C;
     background-color: transparent;
+    transition: background-color 0.3s ease;
 }
 
-button:hover{
+button:hover {
     background-color: #000;
     color: #fff;
 }
