--- a/src/components/HomeSections/About/HomeAboutSection.module.css
+++ b/src/components/HomeSections/About/HomeAboutSection.module.css
@@ -9,8 +9,10 @@
 }
 
   .left {
+    display: flex;
     width: 50%;
     padding-right: 2rem;
+    flex-direction: column;
   }
   
   .title {
@@ -32,18 +34,15 @@
   }
   
   .contactButton {
-    padding: 0.75rem 2rem;
-    border: 1px solid #bbb;
+    display: flex;
+    align-items: center;
+    padding: 0.75rem 1.5rem;
     border-radius: 9999px;
-    background-color: transparent;
-    color: #4a4a4a;
     cursor: pointer;
     transition: background-color 0.3s ease;
+    letter-spacing: 0.1rem;
   }
   
-  .contactButton:hover {
-    background-color: #f0f0f0;
-  }
   
   .right {
     width: 50%;
@@ -56,11 +55,20 @@
   .circle {
     width: 350px;
     height: 350px;
-    background-color: #a3b18a;
     border-radius: 50%;
-    position: absolute;
+    overflow: hidden;
+    position: relative;
+    z-index: 1;
+    background-color: transparent
   }
   
+  .video {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
+  
+
   .sunImage {
     position: absolute;
     top: 0;
@@ -75,6 +83,7 @@
     right: 0;
     width: 250px;
     height: 250px;
+    z-index: 2;
   }
   
   .playButton {
@@ -86,18 +95,23 @@
     align-items: center;
     justify-content: center;
     border: 1px solid #d4c4b5;
+    z-index: 2;
   }
   
   @media (max-width: 768px) {
   .content {
     flex-direction: column;
     align-items: center;
+    padding: 2rem;
+    margin: 2rem;
   }
 
   .left {
-    background-position: center;
-    background-size: 100px, 150px;
-    text-align: center;
+   width: 100%;
+  }
+  .right{
+    width: 100%;
+    height: 100vh;
   }
 
   .title {
@@ -109,8 +123,19 @@
   }
 
   .circle {
-    width: 250px;
-    height: 250px;
+    left: 10px;
+    width: 300px;
+    height: 300px;
+  }
+  .sunImage{
+    top: -100px;
+    right: 0;
+    width: 150px;
+    height: 150px;
+  }
+  .leafImage{
+    bottom: 30px;
+    right: -30px;
   }
 }
 
