--- a/src/components/HomeSections/About/HomeAboutSection.module.css
+++ b/src/components/HomeSections/About/HomeAboutSection.module.css
@@ -102,16 +102,21 @@
   .content {
     flex-direction: column;
     align-items: center;
-    padding: 2rem;
-    margin: 2rem;
+    padding: 1rem;
+    margin: 0.5rem;
   }
 
   .left {
+   margin: 1rem;
    width: 100%;
+   padding: 1rem;
   }
   .right{
+    margin: 1rem;
     width: 100%;
-    height: 100vh;
+    padding: 1rem;
+
+
   }
 
   .title {
@@ -123,19 +128,17 @@
   }
 
   .circle {
-    left: 10px;
     width: 300px;
     height: 300px;
   }
   .sunImage{
-    top: -100px;
-    right: 0;
     width: 150px;
     height: 150px;
   }
   .leafImage{
-    bottom: 30px;
-    right: -30px;
+    width: 150px;
+    height: 150px;
+
   }
 }
 
@@ -158,7 +161,17 @@
   }
 
   .circle {
+    top: 10px;
     width: 200px;
     height: 200px;
+  }
+  .sunImage{
+    width: 100px;
+    height: 100px;
+  }
+  .leafImage{
+    width: 100px;
+    height: 100px;
+
   }
 }
