--- a/src/components/Card/PriceCard/PriceCard.module.css
+++ b/src/components/Card/PriceCard/PriceCard.module.css
@@ -120,7 +120,10 @@
         justify-content: center;
         gap: 1.5rem;
     }
-
+    .card{
+      width: 270px;
+      padding: 1rem;
+    }
    
 }
 
@@ -146,6 +149,9 @@
 
     .card {
         width: 100%; /* Full width on small mobile devices */
+    }
+    .ItemsContainer{
+      padding: 15px;
     }
 }
 
