--- a/src/components/HomeSections/BookYoga/BookYoga.module.css
+++ b/src/components/HomeSections/BookYoga/BookYoga.module.css
@@ -1,137 +1,130 @@
 .BookYogaContainer {
     display: flex;
-    align-items: stretch;
+    flex-wrap: wrap;
     background-color: #fff;
-    width: 95%;
+    width: 90%;
     margin: 2rem auto;
-    padding: 1rem;
+    padding: 2rem;
+    gap: 2rem;
 }
 
+/* Left Section */
 .left {
+    flex: 1;
     display: flex;
-    padding: 10px;
-    width: 50%;
+    align-items: center;
+    justify-content: center;
+    position: relative;
 }
 
 .graphicContents {
     position: relative;
     display: flex;
+    align-items: center;
     justify-content: center;
-    flex-direction: row;
-    align-content: center;
-    flex-wrap: wrap;
+    flex-direction: column;
+    gap: 1rem;
 }
 
 .circleBackground {
-    position: absolute;
-    top: 50px;
-    left: 85px;
-    width: 13rem;
-    height: 13rem;
+    width: 12rem;
+    height: 12rem;
     background-color: #D4CBC2;
     border-radius: 50%;
+    position: absolute;
+    top: 35%;
+    left: 0%;
+    transform: translate(-50%, -50%);
     z-index: 1;
 }
 
 .svgWrapper {
     position: absolute;
-    top: 200px;
-    left: 73px;
-    width: 16rem;
-    height: 16rem;
+    top: 34%;
+    right: 63%;
     z-index: 3;
-
+    height: 300px;
 }
-
-.svgWrapper img {
-    position: relative;
-    overflow: hidden;
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
-    aspect-ratio: 1 / 1;
-    width: 16rem;
-    height: 16rem;
-    transform: rotate(-20deg);
-
-}
-
 
 .imgWrapper {
-    position: absolute;
-    z-index: 1;
-    left: 240px;
-    top: 32px;
+    z-index: 2;
 }
 
 .imgWrapper img {
     border-radius: 10px;
+    width: 360px;
+    height: 700px;
 }
 
+/* Right Section */
 .right {
+    flex: 1;
     display: flex;
-    padding: 10px;
-    width: 50%
-
+    justify-content: center;
+    align-items: flex-start;
+    position: relative;
 }
 
 .contentContainer {
+    z-index: 2;
+    padding: 10px;
+    position: relative;
     width: 60%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-
 }
 
 .heading {
     text-align: left;
-    font-size: 48px;
-    margin-bottom: 1rem;
+    font-size: 2rem;
+    margin-bottom: 0.2rem;
 }
 
 .description {
-    font-size: 12px;
+    text-align: justify;
+    font-size: 1rem;
     color: #4a4a4a;
-    margin-bottom: 1rem;
 }
 
 .emailContainer {
+    padding: 0.8rem 0;
     display: flex;
     align-items: center;
-    margin-bottom: 1rem;
-}
-
-.emailContainer :placeholder-shown {
-    font-family: 'Poppins';
-    font-size: 14px;
+    gap: 0.5rem;
 }
 
 .emailInput {
     flex: 1;
+    padding: 0.75rem;
     border: 1px solid #ccc;
+    outline: none;
     border-radius: 999px;
-    padding: 0.5rem 1rem;
 }
 
 .submitButton {
-    margin-left: 0.5rem;
     background-color: #fff;
+    border: 1px solid #ccc;
     border-radius: 999px;
     padding: 0.5rem;
 }
 
 .contact {
+    padding: 0.5rem 0;
     display: flex;
+    justify-content: space-around;
+    width: 100%;
     font-family: 'Poppins';
     font-size: 12px;
     color: #4a4a4a;
-    justify-content: space-around;
 }
 
 .divider {
+    padding: 0.8rem 0;
     width: 100%;
     height: 1px;
-    margin: 2rem 0;
+    margin: 0.5rem 0;
+}
+
+.divider img {
+    width: 80%;
 }
 
 .rectangle {
@@ -141,169 +134,142 @@
     border-radius: 0.5rem;
 }
 
-.svgOverlay1,
-.svgOverlay2 {
-    width: 10rem;
-    height: 10rem;
-}
+/* SVG Overlays */
 .svgOverlayImage1{
-    bottom: 0;
-    left: 0;
-    position: relative;
-    margin-top: 4.5rem;
+    right: 50px;
+    position: absolute;
     width: 10rem;
     height: 10rem;
+    z-index: 1;
 }
-
-.svgOverlayImage2{
-    top: 0;
+.svgOverlayImage2 {
+    z-index: 3;
     right: 0;
-    position: relative;
-    margin-top: 4.5rem;
-    width: 10rem;
-    height: 10rem;
+    top: 300px;
+    position: absolute;
+    width: 8rem;
+    height: 8rem;
 }
 
-.svg {
-    width: 100%;
-    height: 100%;
-}
+/* Responsive Styles */
 
-@media(min-width: 769px) and (max-width: 1024px) {
-    .imgWrapper {
+@media (min-width: 769px) and (max-width: 1024px) {
+    .BookYogaContainer{
+        gap: 0.5rem;
+    }
+    .left{
         transform: scale(0.8);
-        left: 0;
     }
-
-    .contentContainer {
-        width: 80%;
-    }
-
-    .svgWrapper {
-        bottom:0;
+    .right{
         transform: scale(0.8);
-        z-index: 0;
-        
-    }
-    .svgWrapper img {
-        top: 100px;
-        left: 124px;
-        width: 100%;
-        height: 100%;
-        overflow: hidden;
-        transform: rotate(135deg);
-    }
-    .circleBackground{
-        left: -1px;
     }
 
-    .svgOverlayImage1{
-        bottom: 0px;
-        left: 0px;
+    .contentContainer{
         width: 80%;
-
     }
-    .svgOverlayImage2{
-        top: 0;
-        right: -10px;
-        width: 80%;
 
-    }
+
+    
 }
 
-
+/* Tablet View */
 @media (max-width: 768px) {
     .BookYogaContainer {
-        flex-direction: row;
-        width: 80%;
+        flex-direction: column;
+        gap: 1.5rem;
+        padding: 1.5rem;
     }
 
-    .svgWrapper, .circleBackground{
-        display: none;
-    }
-
-    .imgWrapper, .svgWrapper, .circleBackground{
-        transform: scale(0.8);
-        left: -100px;
-
-    }
-
-    .contentContainer {
-        width: 100%;
-    }
-
-    .svgOverlayImage1{
-        bottom: 0;
-        left: 0;
-        width: 80%;
-    }
-
-    .svgOverlayImage1{
-        bottom: 0;
-        left: 0;
-        width: 80%;
-
-    }
-
-    .svgOverlay1 img {
-        margin-top: 0.5rem;
-        margin-left: 1rem;
-
-    }
-}
-
-@media (max-width: 480px) {
-    .BookYogaContainer {
-        flex-direction: column-reverse;
-        width: 80%;
-    }
-
-    .right {
+    .left, .right {
         width: 100%;
     }
 
     .left {
-        width: 100%;
-        justify-content: center;
+        margin-bottom: 1.5rem;
     }
 
-    .circleBackground {
-        display: none;
-    }
-
-    .svgOverlay1 {
-        display: none;
-    }
-
-    .imgWrapper {
-        position: relative;
-        left: 0;
-        top: 0;
+    .svgWrapper {  
+        top: 100px;
+        right: 200px;
+        height: 350px;
     }
 
     .imgWrapper img {
-        transform: scale(0.8);
-        margin-top: 0.5rem;
-
+        width: 300px;
+        height: 600px;
     }
 
-    .svgWrapper {
-        width: 10rem;
-        height: 10rem;
-        top: 0;
-        left: -35px;
-        transform: rotate(40deg);
+    .contentContainer {
+        width: 60%;
     }
-    .svgWrapper img{
-        top: 0;
-        transform: scale(40deg);
 
+    .heading {
+        font-size: 1.75rem;
     }
-    .imgWrapper img{
-        top: 0;
-        transform: scale(1);
 
+    .description {
+        font-size: 0.75rem;
+    }
+    .contact{
+        font-size: 10px;
+    }
+
+    .emailInput {
+        padding: 0.6rem;
+    }
+
+    .submitButton {
+        padding: 0.4rem;
+    }
+
+    .rectangle {
+        height: 6rem;
     }
 }
 
+/* Mobile View */
+@media (max-width: 480px) {
+    .BookYogaContainer {
+        padding: 1rem;
+        gap: 1rem;
+    }
 
+    .svgWrapper {
+        height: 150px;
+    }
+
+    .imgWrapper {
+        transform: scale(0.8);
+        height: 327px !important;
+        width: 260px !important;
+    }
+
+    .contentContainer{
+        width: 70%;
+    }
+
+    .heading {
+        font-size: 2rem;
+    }
+
+    .description {
+        font-size: 0.7rem;
+    }
+
+    .emailInput {
+        padding: 0.5rem;
+    }
+    .emailInput::placeholder{
+        padding: 0 0.5rem;
+        font-size: 0.7rem;
+
+    }
+
+    .contact {
+        align-items: center;
+        gap: 0.2rem;
+    }
+
+    .rectangle {
+    }
+}
