--- a/src/components/QuestionBox/QuestionBox.module.css
+++ b/src/components/QuestionBox/QuestionBox.module.css
@@ -1,15 +1,18 @@
+.wrapper{
+    width: 60%;
+}
+
 .questionContainer{
     background: #D4CBC2;
     margin-bottom: 10px;
 
 }
-
 .question {
     font-family: 'Elsie';
     font-style: normal;
     font-weight: 400;
-    font-size: 18px;
-    line-height: 33px;
+    font-size: 16px;
+    line-height: 20px;
     color: #27282C;
     display: flex;
     justify-content: space-between;
@@ -52,3 +55,9 @@
     display: block;
 }
 
+
+@media (max-width: 768px) {
+    .wrapper{
+        width: 95%;
+    }
+}
