--- a/src/App.css
+++ b/src/App.css
@@ -22,6 +22,18 @@ p {
     margin-top: 0.5rem;
 }
 
+a{
+    font-family: 'Poppins';
+    letter-spacing: 0.1rem;
+    color: #333;
+    text-decoration: none;
+}
+
+a:hover{
+    color: #fff;
+    text-decoration: none;
+}
+
 button {
     display: flex;
     cursor: pointer;
