--- a/src/components/HomeSections/HomeAboutSection/HomeAboutSection.module.css
+++ b/src/components/HomeSections/HomeAboutSection/HomeAboutSection.module.css
@@ -43,6 +43,9 @@
     transition: background-color 0.3s ease;
     letter-spacing: 0.1rem;
   }
+  .contactButton:hover{
+    color: #c1a78c;
+  }
   
   
   .right {
