Fix the map component  in the contact us page and made it dynamic & Fix the footer icon issue

--- a/src/components/Card/Location/LocationCard.module.css
+++ b/src/components/Card/Location/LocationCard.module.css
@@ -41,7 +41,6 @@
 }
 
 .selected {
-
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
@@ -53,6 +52,7 @@
     font-weight: normal;
     text-align: center;
     color: #27282C;
+    margin-bottom: 1rem;
 }
 
 .location p {
@@ -60,6 +60,8 @@
     font-size: 14px;
     text-align: center;
     color: #27282C;
+    margin-bottom: 0.5rem;
+
 }
 
 
