Hero Banner with API integration with caching, issue - Builder componenet not register issue with SubFields

--- a/src/components/Footer/footer.module.css
+++ b/src/components/Footer/footer.module.css
@@ -117,7 +117,8 @@
 .socialLinks {
   display: flex;
   margin-top: 77px;
-  flex-direction: row-reverse;
+  flex-direction: row;
+  justify-content: flex-end;
 }
 
 .socialIcon {
