--- a/src/components/HomeSections/BookYoga/BookYoga.module.css
+++ b/src/components/HomeSections/BookYoga/BookYoga.module.css
@@ -13,7 +13,7 @@
     flex: 1;
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: flex-end;
     position: relative;
 }
 
@@ -60,7 +60,7 @@
 .right {
     flex: 1;
     display: flex;
-    justify-content: center;
+    justify-content: flex-start;
     align-items: flex-start;
     position: relative;
 }
@@ -69,7 +69,7 @@
     z-index: 2;
     padding: 10px;
     position: relative;
-    width: 60%;
+    width: 50%;
 }
 
 .heading {
@@ -80,7 +80,7 @@
 
 .description {
     text-align: justify;
-    font-size: 1rem;
+    font-size: 0.8rem;
     color: #4a4a4a;
 }
 
@@ -95,8 +95,8 @@
     flex: 1;
     padding: 0.75rem;
     border: 1px solid #ccc;
-    outline: none;
     border-radius: 999px;
+    outline: none;
 }
 
 .submitButton {
@@ -109,7 +109,7 @@
 .contact {
     padding: 0.5rem 0;
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
     width: 100%;
     font-family: 'Poppins';
     font-size: 12px;
@@ -135,16 +135,17 @@
 }
 
 /* SVG Overlays */
-.svgOverlayImage1{
-    right: 50px;
+.svgOverlayImage1 {
+    right: 180px;
     position: absolute;
     width: 10rem;
     height: 10rem;
     z-index: 1;
 }
+
 .svgOverlayImage2 {
     z-index: 3;
-    right: 0;
+    right: 170px;
     top: 300px;
     position: absolute;
     width: 8rem;
@@ -154,22 +155,34 @@
 /* Responsive Styles */
 
 @media (min-width: 769px) and (max-width: 1024px) {
-    .BookYogaContainer{
+    .BookYogaContainer {
         gap: 0.5rem;
     }
-    .left{
-        transform: scale(0.8);
-    }
-    .right{
+
+    .left {
         transform: scale(0.8);
     }
 
-    .contentContainer{
+    .right {
+        justify-content: center;
+        transform: scale(0.8);
+    }
+
+    .contentContainer {
         width: 80%;
     }
 
+    .svgOverlayImage1{
+        right: 0px;
+    }
 
-    
+    .svgOverlayImage2{
+        right: 0px;
+
+    }
+
+
+
 }
 
 /* Tablet View */
@@ -180,15 +193,25 @@
         padding: 1.5rem;
     }
 
-    .left, .right {
+    .left,
+    .right {
         width: 100%;
+        justify-content: center;
+    }
+    .svgOverlayImage1{
+        right: 0px;
+    }
+
+    .svgOverlayImage2{
+        right: 0px;
+        top: 300px;
     }
 
     .left {
         margin-bottom: 1.5rem;
     }
 
-    .svgWrapper {  
+    .svgWrapper {
         top: 100px;
         right: 200px;
         height: 350px;
@@ -210,7 +233,8 @@
     .description {
         font-size: 0.75rem;
     }
-    .contact{
+
+    .contact {
         font-size: 10px;
     }
 
@@ -244,7 +268,7 @@
         width: 260px !important;
     }
 
-    .contentContainer{
+    .contentContainer {
         width: 70%;
     }
 
@@ -259,7 +283,8 @@
     .emailInput {
         padding: 0.5rem;
     }
-    .emailInput::placeholder{
+
+    .emailInput::placeholder {
         padding: 0 0.5rem;
         font-size: 0.7rem;
 
@@ -270,6 +295,4 @@
         gap: 0.2rem;
     }
 
-    .rectangle {
-    }
 }
