--- a/src/Pages/ Services/services.module.css
+++ b/src/Pages/ Services/services.module.css
@@ -8,6 +8,14 @@
     padding-bottom: 1rem;
 }
 
+.therapistGrid {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 20px;
+}
+
+
 
 
 
