--- a/src/components/Card/Card.module.css
+++ b/src/components/Card/Card.module.css
@@ -5,16 +5,18 @@
     padding: 16px;
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    justify-content: center;
     border-radius: 8px;
-    /* box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1); */
+    flex-wrap: wrap;
+    align-items: center;
+    align-content: center;
 }
-
+.imageContainer{
+    margin: 0px 10px;
+}
 .textContainer{
+    padding: 10px;
     background-color: #ffffff;
-    width: 260px;
-    height: 260px;
-    border-radius: 50%;
 }
 
 .textContainer h2 {
@@ -32,77 +34,13 @@
     color: #27282C;
 }
 
-.btn {
-    background-color: #007bff;
-    color: white;
-    border: none;
-    padding: 8px 16px;
-    border-radius: 4px;
-    cursor: pointer;
-}
-
-.btn:hover {
-    background-color: #0056b3;
-}
-
-
-
-/* .locationContainer {
-   
-}
-
-.backgroundImg {
+.childrenContainer{
     display: flex;
-    width: 250px;
-    height: 250px;
-    margin: 5px;
-    border: 0.5px solid;
-    padding: 25px;
-    border-radius: 50%;
-    cursor: pointer;
-    transition: background-image 0.3s ease;
-} */
-
-.location {
-    position: relative;
-    width: 300px;
-    height: 300px;
-    margin: 5px;
-    padding: 15px;
-    border-radius: 50%;
-    cursor: pointer;
-    transition: background-image 0.3s ease;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
+    padding: 10px;
+    flex-wrap: wrap;
     align-items: center;
-    text-align: center;
 }
 
-
-
-.selected {
-
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: cover;
-}
-
-
-.contactButton {
-    margin-top: 10px;
-    padding: 8px 16px;
-    background-color: #27282C;
-    color: #fff;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-}
-
-.mapSection {
-    margin-top: 20px;
-    text-align: center;
-}
 
 @media screen and (max-width: 790px) {
     .locationContainer {
