--- a/src/components/TestimonialCarousel/TestimonialSection.module.css
+++ b/src/components/TestimonialCarousel/TestimonialSection.module.css
@@ -81,6 +81,10 @@
   cursor: pointer;
   color: #333;
 }
+.navButton:hover{
+  background-color: transparent;
+
+}
 
 .dotContainer {
   display: flex;
